# pcl

./: CMakeLists.txt  Vagrantfile
common/: CMakeLists.txt
common/include/pcl/common/: morphological_filter.h
common/include/pcl/common/impl/: morphological_filter.hpp
debian/: README.Debian  changelog  control  copyright  rules
doc/tutorials/content/: index.rst  pcl_json_specification.rst
filters/: CMakeLists.txt
filters/include/pcl/filters/: grid_minimum.h  morphological_filter.h  weighted_voxel_grid.h
filters/include/pcl/filters/impl/: grid_minimum.hpp  morphological_filter.hpp  (+2 more)
filters/src/: grid_minimum.cpp  weighted_voxel_grid.cpp
pipeline/: CMakeLists.txt
pipeline/include/pcl/pipeline/: pipeline.h
pipeline/include/pcl/pipeline/impl/: pipeline.hpp
pipeline/src/: pipeline.cpp
scripts/vagrant/: pcl.sh
segmentation/: CMakeLists.txt
segmentation/include/pcl/segmentation/: progressive_densification_filter.h  progressive_morphological_filter.h
segmentation/src/: progressive_densification_filter.cpp  progressive_morphological_filter.cpp
test/: CMakeLists.txt
test/common/: CMakeLists.txt  test_morphological.cpp
test/filters/: CMakeLists.txt  test_morphological.cpp  test_morphological.cpp~HEAD
test/pipeline/: CMakeLists.txt  test_pipeline.cpp
tools/: CMakeLists.txt  compute_hausdorff.cpp  condensation.cpp  evaluate_bare_earth.cpp  morphological_close.cpp  morphological_dilate.cpp  morphological_erode.cpp  morphological_open.cpp  progressive_densification.cpp  progressive_morphological_filter.cpp  weighted_voxel_grid.cpp
(+2 files in other folders)
